--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Genomics-Main"]
 	path = Genomics-Main
-	url = git@github.com:dannyjackson/Genomics-Main.git
+	url = https://github.com/dannyjackson/Genomics-Main
